<?xml version="1.0"?>
<package format="3">
  <name>teleop_twist_joy</name>
  <version>0.1.3</version>
  <description>Generic joystick teleop for twist robots.</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_joy</url>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
